# qtpidtunehelper

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/gos/qtpth/: version.h.in
src/: CMakeLists.txt
src/qtpth/: CMakeLists.txt  main.cpp  qtPidTuneHelper.pro  qtpidtunehelpermainwindow.cpp  qtpidtunehelpermainwindow.h  qtpidtunehelpermainwindow.ui  version.rc.in
